# Slurm-web

faked_slurm_agent/: main.py  pyproject.toml  requirements.txt  run_agent.sh
frontend/public/: config.json
frontend/src/composables/: GatewayAPI.ts
frontend/src/views/: JobView.vue  JobsView.vue  NodeView.vue  ResourcesView.vue
